# captchaai

./: README.md  __init__.py  api.py  pyproject.toml  setup.cfg  solver.py  src.cfg
.github/workflows/: publish-to-pypi.yml  publish.yml
examples/: recaptcha_example.py
tests/: hcaptcha_example.py  invisible_recaptcha_example.py  normacaptcha_example.py  recaptcha_example.py  recaptchav3_exmple.py
