[metadata]
name = captchaAI
description = python package to interact with the API endpoints of captchaai.com .
long_description_content_type = text/markdown
url = https://github.com/captchaai-developers/captchaai
project_urls =
    Bug Tracker = https://github.com/captchaai-developers/captchaai/issues
    Changelog = https://github.com/captchaai-developers/captchaai/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    captchaai = captchaai.app:entry_point
